mode some major changes to fetch the variable to use in template from the database group_members and group db so rearanged templates and variables..

--- a/templates/emails/welcome.html
+++ b/templates/emails/welcome.html
@@ -4,8 +4,7 @@
     <title>Welcome</title>
 </head>
 <body>
-    <h1>Welcome, {{ student_name }} 🎉</h1>
-    <p>We're happy to have you at {{ school }}.</p>
-    <p><a href="{{ portal_link }}">Access your portal here</a></p>
+    <h1>Welcome, {{ usn }} 🎉</h1>
+    <p>We're happy to have you at {{ class_description }}. - {{ class_name }}</p>
 </body>
 </html>
